.vscode/allianceuat_compare/force-app/main/default/objects/Branch__c/Branch__c.object-meta.xml
<CustomObject>
    <description>Custom records used to drives General Ledger dimensions beyond a natural account.</description>
    <label>Branch</label>
    <nameField>
        <displayFormat>BR-{0000}</displayFormat>
        <label>Branch ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>