.vscode/allianceuat_compare/force-app/main/default/objects/Branch__c/fields/Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code__c</fullName>
    <description>Unique code for the branch.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique code for the branch.</inlineHelpText>
    <label>Branch Code</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>