.vscode/allianceuat_compare/force-app/main/default/objects/Branch__c/fields/Branch_Contact__c.field-meta.xml
<CustomField>
    <fullName>Branch_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>You must provide a point of contact for all branch-related communication and inquiries.</inlineHelpText>
    <label>Branch Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Branches</relationshipLabel>
    <relationshipName>Branches</relationshipName>
    <type>Lookup</type>
</CustomField>