.vscode/allianceuat_compare/force-app/main/default/objects/Branch__c/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <description>Name of the branch.</description>
    <inlineHelpText>Name of the branch.</inlineHelpText>
    <label>Branch Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>