.vscode/allianceuat_compare/force-app/main/default/objects/Branch__c/fields/Brand_c__c.field-meta.xml
<CustomField>
    <fullName>Brand_c__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nursing</fullName>
            </value>
            <value>
                <fullName>Rural &amp; Remote</fullName>
            </value>
            <value>
                <fullName>Extra Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>