.vscode/allianceuat_compare/force-app/main/default/objects/Branch__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <inlineHelpText>Provide a generic email address for branch-related inquiries.</inlineHelpText>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>