.vscode/allianceuat_compare/force-app/main/default/objects/Branch__c/fields/GL_Department__c.field-meta.xml
<CustomField>
    <fullName>GL_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Accounting Segment - Branches GL Department</inlineHelpText>
    <label>GL Department</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_bgl__Acc_Segments__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Assignment Department</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_bgl__Acc_Segments__c</referenceTo>
    <relationshipLabel>Branches</relationshipLabel>
    <relationshipName>Branches</relationshipName>
    <type>Lookup</type>
</CustomField>