.vscode/allianceuat_compare/force-app/main/default/objects/Branch__c/fields/Pay_Advice_Message__c.field-meta.xml
<CustomField>
    <fullName>Pay_Advice_Message__c</fullName>
    <label>Pay Advice Message</label>
    <type>TextArea</type>
</CustomField>