.vscode/allianceuat_compare/force-app/main/default/objects/Branch__c/fields/Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Post_Code__c</fullName>
    <inlineHelpText>Enter the postal code for the branch location.</inlineHelpText>
    <label>Post Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>