.vscode/allianceuat_compare/force-app/main/default/objects/Branch__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <inlineHelpText>Select the state or territory for the branch address.</inlineHelpText>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Australian Capital Territory</fullName>
            </value>
            <value>
                <fullName>New South Wales</fullName>
            </value>
            <value>
                <fullName>Northern Territory</fullName>
            </value>
            <value>
                <fullName>Queensland</fullName>
            </value>
            <value>
                <fullName>South Australia</fullName>
            </value>
            <value>
                <fullName>Tasmania</fullName>
            </value>
            <value>
                <fullName>Victoria</fullName>
            </value>
            <value>
                <fullName>Western Australia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>