.vscode/allianceuat_compare/force-app/main/default/objects/Branch__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <inlineHelpText>Enter the full street address of the branch.</inlineHelpText>
    <label>Street Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>