.vscode/allianceuat_compare/force-app/main/default/objects/Branch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Branch_Name__c</columns>
    <columns>Branch_Code__c</columns>
    <columns>GL_Department__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>Street_Address__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Post_Code__c</columns>
    <columns>Pay_Advice_Message__c</columns>
    <columns>Branch_Phone_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>